--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pirates</title>
 
-    <link rel="stylesheet" href="styles.css" /> 
+    <link rel="stylesheet" href="styles.css?v=0.0.1" /> 
     <link rel="manifest" href="manifest.json">
 </head>
 
@@ -165,6 +165,9 @@
             Install
         </button>
     </div>
-    <script src="index.js" type="text/javascript"></script>
+    <button id="notifications" type="button">
+        Enable Notifications
+    </button>
+    <script src="index.js?v=0.0.1" type="text/javascript"></script>
 </footer>
 </html>
