--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pirates</title>
 
-    <link rel="stylesheet" href="styles.css?v=0.0.2" /> 
-    <link rel="manifest" crossorigin="use-credentials" href="manifest.json">
+    <link rel="stylesheet" href="styles.css?v=0.0.3" /> 
+    <link rel="manifest" crossorigin="use-credentials" href="manifest.json?v=0.0.3">
 </head>
 
 <body>
@@ -187,6 +187,6 @@
     <div class="hidden" id="requireHTTPS">
         Must be served over <a>HTTPS</a>
     </div>
-    <script src="index.js?v=0.0.2" type="text/javascript"></script>
+    <script src="index.js?v=0.0.3" type="text/javascript"></script>
 </footer>
 </html>
